tests/paczka1/fuzzy1/72219957.err
Error in line 7: S269 S269 90,7
Error in line 14: S269 S356 47,7
Error in line 17: DOqKqp4flO0 S356 80,1
Error in line 18: fv0QyFdmKo A92 45,1
Error in line 28: UbPN S269 O4,6
Error in line 34: DOqKqp4flO0 A548 54,4
Error in line 37: dw7 S356 59,0
Error in line 36: DOqKqp4flO0 S356 97,5
